--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 spring.datasource.url=jdbc:postgresql://localhost:5432/studentsdb
 spring.datasource.username=postgres
-spring.datasource.password=Canutillo1999
+spring.datasource.password=PostgresPassword
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
